--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,9 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": []
+  "presets": [
+    ["@babel/preset-env"
+    ]
+  ],
+  "plugins": [
+    ["@babel/plugin-transform-runtime"]
+  ]
 }
