--- a/package.json
+++ b/package.json
@@ -60,12 +60,16 @@
     "prepack": "npm run build"
   },
   "devDependencies": {
+    "@babel/plugin-external-helpers": "^7.16.5",
+    "@babel/plugin-transform-runtime": "^7.16.5",
     "@babel/preset-env": "~7.16.0",
     "@rollup/plugin-babel": "~5.3.0",
     "@rollup/plugin-commonjs": "~21.0.1",
     "@rollup/plugin-json": "~4.1.0",
     "@rollup/plugin-node-resolve": "~13.0.6",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-istanbul": "~6.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "chai": "~4.3.4",
     "copyfiles": "~2.4.1",
     "eslint": "~8.2.0",
@@ -83,6 +87,7 @@
     "karma-spec-reporter": "~0.0.32",
     "mocha": "~9.1.3",
     "rollup": "~2.60.0",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-peer-deps-external": "~2.2.4",
     "rollup-plugin-terser": "~7.0.2",
     "serve": "~13.0.2",
@@ -91,6 +96,7 @@
     "watchify": "~4.0.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.16.5",
     "eventemitter3": "~4.0.7"
   },
   "peerDependencies": {
